src/src/index.css
:root {
  --background-colour: #fcfcfc;
  --brand-colour-1: #7940bf;
  --brand-colour-2: #8b5ac7;
  --brand-colour-3: #9e75d0;
  --brand-colour-4: #b190d9;
  --brand-colour-5: #0003;
  font-size: 16px;
  scroll-behavior: smooth;
}

body {
  margin: 0;
  font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: var(--background-colour);
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

h1, h2, h3, h4, h5 {
  color: var(--brand-colour-1);
}

h1 {
  font-size: 2rem;
  text-align: center;
}

h2 {
  font-size: 1.6rem;
}

h3 {
  font-size: 1.4rem;
}

p {
  line-height: 1.4rem;
}

nav {
  text-align: center;
}

img {
  max-width: 100%;
}

img.companyLogo {
  max-width: 50%;
  max-height: 100px;
  margin: auto;
}

.border {
  border-radius: 5px;
  border: 2px solid var(--background-colour);
}

header {
  display: flex;
  align-items: center;
  justify-content: center;
  padding-left: 2rem;
}

header>i {
  font-size: 2.5rem;
  color: var(--brand-colour-1);
}

footer {
  position: fixed;
  bottom: 0;
  width: 100%;
  height: 10vh;
  text-align: center;
  font-size: 0.7rem;
  color: var(--brand-colour-5);
  background-color: var(--background-colour);
}

footer>p {
  margin: 0 0 0.5rem 0;
}

article {
  min-height: 90vh;
  padding: 2vh 2rem 8vh 2rem;
}

article:nth-child(odd) {
  background-color: var(--brand-colour-4);
  color: #fcfcfc;
}

i {
  font-size: 1.2rem;
}

i>p {
  padding: 0 0 0.8rem 0;
  margin: 0 0 0 0;
  font-size: 0.8rem;
}

#mobile-navigation {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: center;
  list-style: none;
  margin: 0.6em 0 0 0;
  padding: 0;
  width: 100%;
}

#mobile-navigation>li {
  width: 100%;
}

.companiesList {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.companyDetails {
  display: flex;
  flex-direction: column;
  width: 100%;
  margin-bottom: 2rem;
}

.companyDetails a {
  display: flex;
}

.companyJobTitle{
  display: flex;
  justify-content: space-between;
}

.companyJobTitle * {
  margin-bottom: 0;
}

.skillslist {
  display: flex;
  justify-content: center;
  width: 100%;
}

.skillslist>ul>li {
  padding: 0.5rem;
  font-size: 1.4rem
}

.workStatus {
  text-align: center;
  width: 75%;
  margin: auto;
  padding-bottom: 1rem;
}

.workStatus > .open {
  color: green;
}

.workStatus > .closed {
  color: red;
}

.bold {
  font-weight: bold;
}

.italic {
  font-style: italic;
}

.link {
  text-decoration: underline;
  color: blue;
}

